--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "icmaps-frontend",
   "version": "1.0.0",
   "homepage": "https://www.icmaps.org/",
-  "description": "ICMaps - Fully scalable and dezentralized wmts server for Internet Computer",
+  "description": "ICMaps - Fully scalable and decentralized wmts server for Internet Computer",
   "repository": "https://github.com/stumpigit/icmaps",
   "license": "MIT",
   "scripts": {
@@ -38,6 +38,7 @@
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
     "ol": "^6.14.1",
+    "prismjs": "^1.28.0",
     "rollup-plugin-postcss": "^4.0.2",
     "sirv-cli": "1.0.11",
     "svelte-multiselect": "^5.0.1",
